--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   http: ^0.12.0+2
+  shared_preferences: ^0.5.2
+
 
 dev_dependencies:
   flutter_test:
@@ -44,7 +46,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - logo/logo.png
-  #  - images/a_dot_ham.jpeg
+    - assets/back.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
