--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   http: ^0.12.0+2
-  shared_preferences: ^0.5.2
+  scoped_model: ^1.0.1
+
+  # shared_preferences: ^0.5.2
 
 
 dev_dependencies:
@@ -46,6 +48,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - logo/logo.png
+    - logo/logo2.png
     - assets/back.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
